chore: Adjust to practice Kiamol exercises

--- a/ch05/lab/todo-list/web.yaml
+++ b/ch05/lab/todo-list/web.yaml
@@ -31,3 +31,10 @@ spec:
             value: Sqlite
           - name: ConnectionStrings__ToDoDb
             value: "Filename=/data/todo-list-lab.db"
+          volumeMounts:
+          - mountPath: "/data"
+            name: data
+      volumes:
+        - name: data
+          persistentVolumeClaim:
+            claimName: todo-web-lab
