--- a/ch10/lab/todo-list/templates/configMap.yaml
+++ b/ch10/lab/todo-list/templates/configMap.yaml
@@ -9,6 +9,6 @@ data:
   config.json: |-
     {
       "ConfigController": {
-        "Enabled" : false             
+        "Enabled" : {{ .Values.configController.enabled }}             
       }
     } 
