--- a/ch14/prometheus/prometheus.yaml
+++ b/ch14/prometheus/prometheus.yaml
@@ -36,7 +36,7 @@ metadata:
   name: prometheus
   namespace: kiamol-ch14-monitoring
 ---
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: prometheus
@@ -55,7 +55,7 @@ rules:
   - configmaps
   verbs: ["get"]
 ---
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: prometheus
