--- a/ch03/lab/deployments.yaml
+++ b/ch03/lab/deployments.yaml
@@ -54,3 +54,5 @@ spec:
       containers:
         - name: web
           image: kiamol/ch03-numbers-web:v2
+          ports:
+          - containerPort: 80
