--- a/ch07/lab/pi/web-service.yaml
+++ b/ch07/lab/pi/web-service.yaml
@@ -9,6 +9,9 @@ spec:
     - port: 8070    
       targetPort: 80
       name: http
+    - port: 8071
+      targetPort: 8080
+      name: version-http
   selector:
     app: pi-web
   type: LoadBalancer
