--- a/ch10/lab/todo-list/templates/deployment.yaml
+++ b/ch10/lab/todo-list/templates/deployment.yaml
@@ -1,26 +1,26 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: todo-web       # this needs to be templated
+  name: {{ .Release.Name }}       # this needs to be templated
   labels:
     kiamol: ch10-lab
 spec:
   selector:
     matchLabels:            # this needs to be templated
-      app: todo-web        
-      environment: test
+      app: {{ .Release.Name }}        
+      environment: {{ .Values.environment }}
   template:
     metadata:
       labels:               # this needs to be templated
-        app: todo-web
-        environment: test
+        app: {{ .Release.Name }}
+        environment: {{ .Values.environment }}
     spec:
       containers:
         - name: web
           image: kiamol/ch04-todo-list
           env:
           - name: ASPNETCORE_ENVIRONMENT
-            value: Test     # this should be parameterized
+            value: {{ .Values.environment | camelcase }}     # this should be parameterized
           volumeMounts:
             - name: config
               mountPath: "/app/config"
@@ -28,4 +28,4 @@ spec:
       volumes:
         - name: config
           configMap:
-            name: todo-web-config   # this needs to be templated
+            name: {{ .Values.configMap.name }}   # this needs to be templated
