--- a/ch11/infrastructure/buildkitd.yaml
+++ b/ch11/infrastructure/buildkitd.yaml
@@ -29,7 +29,7 @@ spec:
     spec:
       containers:
       - name: buildkitd
-        image: moby/buildkit:v0.7.1
+        image: moby/buildkit:master
         args:
         - --addr
         - unix:///run/buildkit/buildkitd.sock
