--- a/ch13/fluentbit/fluentbit.yaml
+++ b/ch13/fluentbit/fluentbit.yaml
@@ -59,7 +59,7 @@ rules:
   - pods
   verbs: ["get", "list", "watch"]
 ---
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: fluent-bit
