--- a/ch13/lab/vweb/vweb-deployment.yaml
+++ b/ch13/lab/vweb/vweb-deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name:  vweb
+  namespace: kiamol-ch13-lab
 spec:
   selector:
     matchLabels:
@@ -10,6 +11,8 @@ spec:
     metadata:
       labels:
         app: vweb
+      annotations:
+        fluentbit.io/parser: nginx
     spec:
       containers:
         - name: web
