--- a/ch14/kube/cadvisor.yaml
+++ b/ch14/kube/cadvisor.yaml
@@ -16,7 +16,8 @@ spec:
     spec:
       containers:
       - name: cadvisor
-        image: k8s.gcr.io/cadvisor:v0.35.0
+        image: gcr.io/cadvisor/cadvisor:latest
+        # image: k8s.gcr.io/cadvisor:v0.35.0
         volumeMounts:
         - name: rootfs
           mountPath: /rootfs
