--- a/ch15/ingress-traefik/traefik-ingress-controller.yaml
+++ b/ch15/ingress-traefik/traefik-ingress-controller.yaml
@@ -43,7 +43,7 @@ spec:
         name: traefik-ingress-lb
     spec:
       containers:
-      - image: traefik:v2.2.1
+      - image: traefik:v2.11.6
         name: traefik-ingress-lb
         ports:
         - name: http
@@ -70,7 +70,7 @@ metadata:
   namespace: kiamol-ingress-traefik
 ---
 kind: ClusterRole
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: ingress-traefik-controller
   namespace: kiamol-ingress-traefik
@@ -86,14 +86,17 @@ rules:
       - list
       - watch
   - apiGroups:
+      - networking.k8s.io
       - extensions
     resources:
       - ingresses
+      - ingressclasses
     verbs:
       - get
       - list
       - watch
   - apiGroups:
+    - networking.k8s.io
     - extensions
     resources:
     - ingresses/status
@@ -101,7 +104,7 @@ rules:
     - update
 ---
 kind: ClusterRoleBinding
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: ingress-traefik-controller
   namespace: kiamol-ingress-traefik
