--- a/ch15/lab/apod/api.yaml
+++ b/ch15/lab/apod/api.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: apod-api
+  namespace: kiamol-ch15-lab
 spec:
   ports:
     - port: 80
@@ -13,6 +14,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  namespace: kiamol-ch15-lab
   name: apod-api
 spec:
   selector:
