--- a/ch15/lab/apod/log.yaml
+++ b/ch15/lab/apod/log.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: apod-log
+  namespace: kiamol-ch15-lab
 spec:
   ports:
     - port: 80
@@ -14,6 +15,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: apod-log
+  namespace: kiamol-ch15-lab
 spec:
   selector:
     matchLabels:
