--- a/ch15/pi/update/ingress-with-cache.yaml
+++ b/ch15/pi/update/ingress-with-cache.yaml
@@ -1,7 +1,8 @@
-apiVersion: networking.k8s.io/v1beta1 
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: pi
+  namespace: default
   labels:
     kiamol: ch15
   annotations:
@@ -15,6 +16,9 @@ spec:
     http:
       paths:
       - path: /
+        pathType: Exact
         backend:
-          serviceName: pi-web
-          servicePort: 80
+          service:
+            name: pi-web
+            port:
+              number: 80
