--- a/ch15/todo-list/update/ingress-traefik-https.yaml
+++ b/ch15/todo-list/update/ingress-traefik-https.yaml
@@ -1,4 +1,4 @@
-apiVersion: networking.k8s.io/v1beta1 
+apiVersion: networking.k8s.io/v1 
 kind: Ingress
 metadata:
   name: todo2-new
@@ -6,21 +6,23 @@ metadata:
     kiamol: ch15
   annotations:
     kubernetes.io/ingress.class: traefik
-    traefik.ingress.kubernetes.io/router.pathmatcher: Path
     traefik.ingress.kubernetes.io/router.tls: "true"
 spec:
+  tls:
+  - secretName: kiamol-cert
   rules:
   - host: todo2.kiamol.local
     http:
       paths:
       - path: /new
+        pathType: Exact
         backend:
-          serviceName: todo-web-sticky
-          servicePort: 80
-  tls:
-   - secretName: kiamol-cert
+          service:
+            name: todo-web-sticky
+            port:
+              number: 80
 ---
-apiVersion: networking.k8s.io/v1beta1 
+apiVersion: networking.k8s.io/v1 
 kind: Ingress
 metadata:
   name: todo2-static
@@ -28,21 +30,23 @@ metadata:
     kiamol: ch15
   annotations:
     kubernetes.io/ingress.class: traefik
-    traefik.ingress.kubernetes.io/router.pathmatcher: PathPrefix
     traefik.ingress.kubernetes.io/router.tls: "true"
 spec:
+  tls:
+  - secretName: kiamol-cert
   rules:
   - host: todo2.kiamol.local
     http:
       paths:
       - path: /static
+        pathType: Prefix
         backend:
-          serviceName: todo-web
-          servicePort: 80
-  tls:
-   - secretName: kiamol-cert
+          service:
+            name: todo-web
+            port:
+              number: 80
 ---
-apiVersion: networking.k8s.io/v1beta1 
+apiVersion: networking.k8s.io/v1 
 kind: Ingress
 metadata:
   name: todo2
@@ -50,20 +54,25 @@ metadata:
     kiamol: ch15
   annotations:
     kubernetes.io/ingress.class: traefik
-    traefik.ingress.kubernetes.io/router.pathmatcher: Path
     traefik.ingress.kubernetes.io/router.tls: "true"
 spec:
+  tls:
+  - secretName: kiamol-cert
   rules:
   - host: todo2.kiamol.local
     http:
       paths:
       - path: /
+        pathType: Exact
         backend:
-          serviceName: todo-web
-          servicePort: 80
+          service:
+            name: todo-web
+            port:
+              number: 80
       - path: /list
+        pathType: Exact
         backend:
-          serviceName: todo-web
-          servicePort: 80
-  tls:
-   - secretName: kiamol-cert
+          service:
+            name: todo-web
+            port:
+              number: 80
