--- a/ch15/todo-list/update/ingress-traefik.yaml
+++ b/ch15/todo-list/update/ingress-traefik.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     kiamol: ch15
   annotations:
-    kubernetes.io/ingress.class: traefik
+    kubernetes.io/ingress.class: traefik-lb
     traefik.ingress.kubernetes.io/service.sticky.cookie: "true"
 spec:
   ports:
@@ -14,7 +14,8 @@ spec:
   selector:
     app: todo-web
 ---
-apiVersion: networking.k8s.io/v1beta1 
+# Traefik version 2.x with Kubernetes Ingress provider doesn't support ingressClassName attribute in YAML. It only supports annotations
+apiVersion: networking.k8s.io/v1 
 kind: Ingress
 metadata:
   name: todo2-new
@@ -22,18 +23,20 @@ metadata:
     kiamol: ch15
   annotations:
     kubernetes.io/ingress.class: traefik
-    traefik.ingress.kubernetes.io/router.pathmatcher: Path
 spec:
   rules:
   - host: todo2.kiamol.local
     http:
       paths:
       - path: /new
+        pathType: Exact
         backend:
-          serviceName: todo-web-sticky
-          servicePort: 80
+          service:
+            name: todo-web-sticky
+            port:
+              number: 80
 ---
-apiVersion: networking.k8s.io/v1beta1 
+apiVersion: networking.k8s.io/v1 
 kind: Ingress
 metadata:
   name: todo2-static
@@ -41,18 +44,20 @@ metadata:
     kiamol: ch15
   annotations:
     kubernetes.io/ingress.class: traefik
-    traefik.ingress.kubernetes.io/router.pathmatcher: PathPrefix
 spec:
   rules:
   - host: todo2.kiamol.local
     http:
       paths:
       - path: /static
+        pathType: Prefix
         backend:
-          serviceName: todo-web
-          servicePort: 80
+          service:
+            name: todo-web
+            port:
+              number: 80
 ---
-apiVersion: networking.k8s.io/v1beta1 
+apiVersion: networking.k8s.io/v1 
 kind: Ingress
 metadata:
   name: todo2
@@ -60,17 +65,23 @@ metadata:
     kiamol: ch15
   annotations:
     kubernetes.io/ingress.class: traefik
-    traefik.ingress.kubernetes.io/router.pathmatcher: Path
+    # traefik.ingress.kubernetes.io/router.pathmatcher: Path
 spec:
   rules:
   - host: todo2.kiamol.local
     http:
       paths:
       - path: /
+        pathType: Exact
         backend:
-          serviceName: todo-web
-          servicePort: 80
+          service:
+            name: todo-web
+            port:
+              number: 80
       - path: /list
+        pathType: Exact
         backend:
-          serviceName: todo-web
-          servicePort: 80
+          service:
+            name: todo-web
+            port:
+              number: 80
