--- a/ch16/admission-webhook/helm/mutating-webhook/templates/mutatingWebhookConfiguration.yaml
+++ b/ch16/admission-webhook/helm/mutating-webhook/templates/mutatingWebhookConfiguration.yaml
@@ -1,4 +1,4 @@
-apiVersion: admissionregistration.k8s.io/v1beta1
+apiVersion: admissionregistration.k8s.io/v1
 kind: MutatingWebhookConfiguration
 metadata:
   name: nonrootpolicy
@@ -17,3 +17,5 @@ webhooks:
         namespace: default
         path: "/mutate"
       caBundle: {{ .Values.caBundle }}
+    sideEffects: None
+    admissionReviewVersions: ["v1"]
