--- a/ch16/opa/templates/requiredLabels-template.yaml
+++ b/ch16/opa/templates/requiredLabels-template.yaml
@@ -1,4 +1,4 @@
-apiVersion: templates.gatekeeper.sh/v1beta1
+apiVersion: templates.gatekeeper.sh/v1
 kind: ConstraintTemplate
 metadata:
   name: requiredlabels
@@ -9,10 +9,12 @@ spec:
         kind: RequiredLabels
       validation:
         openAPIV3Schema:
+          type: object
           properties:
             labels:
               type: array
-              items: string
+              items: 
+                type: string
   targets:
     - target: admission.k8s.gatekeeper.sh
       rego: |
