--- a/ch17/lab/kube-explorer/03-rbac.yaml
+++ b/ch17/lab/kube-explorer/03-rbac.yaml
@@ -24,3 +24,19 @@ roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
   name: default-pod-reader-lab
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: kube-explorer-lab-pods-ch17-lab
+  namespace: kiamol-ch17-lab 
+  labels:
+    kiamol: ch17-lab
+subjects:
+- kind: ServiceAccount
+  name: kube-explorer-lab
+  namespace: kiamol-ch17-lab
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: default-pod-reader-lab
