--- a/ch18/Vagrantfile
+++ b/ch18/Vagrantfile
@@ -1,3 +1,9 @@
+class VagrantPlugins::ProviderVirtualBox::Action::Network
+  def dhcp_server_matches_config?(dhcp_server, config)
+    true
+  end
+end
+
 Vagrant.configure("2") do |config|
   
   config.vm.define "kiamol-control" do |control|
@@ -5,14 +11,25 @@ Vagrant.configure("2") do |config|
     control.vm.hostname = "kiamol-control"
     control.vm.network "private_network", type: "dhcp"
 
-    control.vm.provider :hyperv do |v|
-      v.vmname = "kiamol-control"
-      v.maxmemory = 3000
-      v.cpus = 2
-    end
+    # control.vm.provider :hyperv do |v|
+    #   v.vmname = "kiamol-control"
+    #   v.maxmemory = 3000
+    #   v.cpus = 2
+    # end
 
     control.vm.provider :virtualbox do |v|
       v.name = "kiamol-control"
+      v.memory = 3000
+      v.cpus = 2
+    end
+  end
+
+  config.vm.define "kiamol-control-test" do |control|
+    control.vm.box = "bento/ubuntu-20.04"
+    control.vm.hostname = "kiamol-control-test"
+
+    control.vm.provider :virtualbox do |v|
+      v.name = "kiamol-control-test"
       v.memory = 3000
       v.cpus = 2
     end
